--- a/mysql-test/suite/galera/galera_4nodes.cnf
+++ b/mysql-test/suite/galera/galera_4nodes.cnf
@@ -15,6 +15,7 @@ wsrep_sync_wait = 15
 wsrep_node_address=127.0.0.1
 wsrep_sst_receive_address=127.0.0.1:@mysqld.1.#sst_port
 wsrep_node_incoming_address=127.0.0.1:@mysqld.1.port
+wsrep_sst_auth='@mysqld.1.#user:@mysqld.1.#password'
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
@@ -33,6 +34,7 @@ wsrep_sync_wait = 15
 wsrep_node_address=127.0.0.1
 wsrep_sst_receive_address=127.0.0.1:@mysqld.2.#sst_port
 wsrep_node_incoming_address=127.0.0.1:@mysqld.2.port
+wsrep_sst_auth='@mysqld.2.#user:@mysqld.2.#password'
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
@@ -51,6 +53,7 @@ wsrep_sync_wait = 15
 wsrep_node_address=127.0.0.1
 wsrep_sst_receive_address=127.0.0.1:@mysqld.3.#sst_port
 wsrep_node_incoming_address=127.0.0.1:@mysqld.3.port
+wsrep_sst_auth='@mysqld.3.#user:@mysqld.3.#password'
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
@@ -69,6 +72,7 @@ wsrep_sync_wait = 15
 wsrep_node_address=127.0.0.1
 wsrep_sst_receive_address=127.0.0.1:@mysqld.4.#sst_port
 wsrep_node_incoming_address=127.0.0.1:@mysqld.4.port
+wsrep_sst_auth='@mysqld.4.#user:@mysqld.4.#password'
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
